--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=inventory-service
+spring.datasource.url=jdbc:mysql://localhost:3306/inventory_service
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=none
+server.port=8082
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
