added wiremock test

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 server.port=8081
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+inventory.url=http://localhost:8082
