--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -99,6 +99,12 @@
 			<type>pom</type>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
+			<version>4.1.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
