--- a/inventory-service/pom.xml
+++ b/inventory-service/pom.xml
@@ -77,6 +77,13 @@
 			<artifactId>mysql</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
+			<version>4.1.4</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
