Added Swagger documentation for OpenAPI

--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8081
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 inventory.url=http://localhost:8082
+springdoc.swagger-ui.path=/swagger-ui.html
+#i.e. http://localhost:8081/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+#i.e. http://localhost:8081/api-docs
