--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
 server.port=8082
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+springdoc.swagger-ui.path=/swagger-ui.html
+#i.e. http://localhost:8082/swagger-ui.html
+springdoc.api-docs.path=/api-docs
+#i.e. http://localhost:8082/api-docs
